Fix: correção do bug no botão de light/dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,39 +37,33 @@ body {
  --bg: var(--very-Dark-Blue);
  --fg: var(--very-Dark-Gray-Blue);
  --top-img: url(https://images.unsplash.com/photo-1432847712612-926caafaa802?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80);
- --toggle-btn:  url(/images/icon-sun.svg);
+ --toggle-btn:  url(https://cdn-icons-png.flaticon.com/512/831/831682.png);
  
-
  background: var(--bg);
  color: var(--fg);
  transition:2ms
 }
 
-.toggle-btn{
-    background-size: cover;
-    height: 30px;
-    width:30px;
-}
-
-.light {
-    --top-img: url(https://images.unsplash.com/photo-1607666340313-493c5017a3a0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80);
-    --toggle-btn: url(/images/icon-moon.svg);
-    --bg: var(--light-Grayish-Blue);
-    --fg: var(--very-Light-Gray);
-}
-
-
 .top-img {
     width:100%;
-    height: 225px;
+    height: 250px;
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: var(--top-img)
+    background-image: var(--top-img);
+    z-index: 0;
 }
 
 .toggle-btn{
     background: var(--toggle-btn);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 2.8em;
+    min-height: 10px;
+    z-index: 1;
+    margin: 0;
+    padding: 0;
 }
 
 main{
@@ -87,10 +81,11 @@ main{
     color: white;
     letter-spacing: 10px;
     font-weight: 700;
+    height: 2.6em;
 }
 
 .type-todo{
-    margin-top: 24px;
+    margin-top: 50px;
     width: 100%;
     background-color: var(--fg);
     padding: 10px;
@@ -98,6 +93,7 @@ main{
     display: grid;
     grid-template-columns: 10% auto;
     align-items: center;
+    z-index: 0;
 }
 
 .type-todo, .todos {
